fixed bug where a random bar appeared on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,9 @@ p, h1, h2 {
 
 .finisher-header {
   width: 100%;
-  height: 100dvh;
+  height: 100%;
   position: fixed;
+
 }
 
 @keyframes gradient {
